Use getFirst for entries in a List
#39